; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfsplus.c_grub_hfsplus_mtime.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfsplus.c_grub_hfsplus_mtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.grub_hfsplus_data = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@my_mod = common dso_local global i32 0, align 4
@grub_errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i64*)* @grub_hfsplus_mtime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_hfsplus_mtime(%struct.TYPE_5__* %0, i64* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.grub_hfsplus_data*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i64* %1, i64** %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* @my_mod, align 4
  %11 = call i32 @grub_dl_ref(i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = call %struct.grub_hfsplus_data* @grub_hfsplus_mount(i32 %12)
  store %struct.grub_hfsplus_data* %13, %struct.grub_hfsplus_data** %5, align 8
  %14 = load %struct.grub_hfsplus_data*, %struct.grub_hfsplus_data** %5, align 8
  %15 = icmp ne %struct.grub_hfsplus_data* %14, null
  br i1 %15, label %18, label %16

16:                                               ; preds = %2
  %17 = load i64*, i64** %4, align 8
  store i64 0, i64* %17, align 8
  br label %26

18:                                               ; preds = %2
  %19 = load %struct.grub_hfsplus_data*, %struct.grub_hfsplus_data** %5, align 8
  %20 = getelementptr inbounds %struct.grub_hfsplus_data, %struct.grub_hfsplus_data* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @grub_be_to_cpu32(i32 %22)
  %24 = sub nsw i64 %23, 2082844800
  %25 = load i64*, i64** %4, align 8
  store i64 %24, i64* %25, align 8
  br label %26

26:                                               ; preds = %18, %16
  %27 = load i32, i32* @my_mod, align 4
  %28 = call i32 @grub_dl_unref(i32 %27)
  %29 = load %struct.grub_hfsplus_data*, %struct.grub_hfsplus_data** %5, align 8
  %30 = call i32 @grub_free(%struct.grub_hfsplus_data* %29)
  %31 = load i32, i32* @grub_errno, align 4
  ret i32 %31
}

declare dso_local i32 @grub_dl_ref(i32) #1

declare dso_local %struct.grub_hfsplus_data* @grub_hfsplus_mount(i32) #1

declare dso_local i64 @grub_be_to_cpu32(i32) #1

declare dso_local i32 @grub_dl_unref(i32) #1

declare dso_local i32 @grub_free(%struct.grub_hfsplus_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
